deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: node-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      com.talend.application: all
      app: node-app1
  template:
    metadata:
      labels:
        app: node-app1
        com.talend.application: all
      annotations:
        sidecar.vault.talend.org/inject: "true"
        sidecar.vault.talend.org/secrets-type: "static"
        sidecar.vault.talend.org/secrets-path: "everyone/public-key"
    spec:
      containers:
      - name: node-app1
        image: devorbitus/app1
        ports:
        - containerPort: 3000
      serviceAccount: everyone
      serviceAccountName: everyone
