test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-secrets
  template:
    metadata:
      labels:
        app: hello-secrets
      annotations:
        akeyless/enabled: "true"
        akeyless/inject_file: "/K8s/app1secret"
    spec:
      containers:
      - name: alpine
        image: alpine
        command:
          - "sh"
          - "-c"
          - "cat /akeyless/secrets/K8s/app1secret && echo going to sleep... && sleep 10000"
        # env:
        # - name: MY_SECRET
        #   value: akeyless:/K8s/app1secret
