ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
  name: app1-ingress
  namespace: cg-akeyless
spec:
  rules:
  - host: cg-app1.akeyless-security.com
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: app1-service
            port: 
              number: 80
        path: /
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    - cg-app1.akeyless-security.com
    secretName: app1-akeyless-tls # < cert-manager will store the created certificate in this secret.
